在文章详情页加入文章详情和评论详情切换的Fragment， 能显示评论列表 修改之前没在ui线程实现的界面提示操作

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">登录界面</string>
+    <string name="comment_detail">----------评论详情----------</string>
 </resources>
